services/stadium/Deployment-Bigger.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    project: mesh-arena
    app: stadium
    version: big
  name: stadium-big
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stadium
      version: big
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/port: "9090"
        status.sidecar.istio.io/port: "0"
      labels:
        project: mesh-arena
        app: stadium
        version: big
    spec:
      containers:
      - image: jotak/demo-mesh-arena-stadium:1.1.3
        imagePullPolicy: IfNotPresent
        name: stadium
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
