services/stadium/Deployment-Smaller.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: stadium
    version: small
  name: stadium-small
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stadium
      version: small
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/port: "9090"
        kiali.io/runtimes: vertx-server,vertx-client,vertx-pool
      labels:
        app: stadium
        version: small
    spec:
      containers:
      - image: jotak/demo-mesh-arena-stadium:1.1.2
        imagePullPolicy: IfNotPresent
        name: stadium
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
