services/stadium/Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: stadium
    version: v1
  name: stadium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stadium
      version: v1
  template:
    metadata:
      labels:
        app: stadium
        version: v1
    spec:
      containers:
      - image: jotak/demo-mesh-arena-stadium:latest
        imagePullPolicy: IfNotPresent
        name: stadium
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
