services/stadium/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: stadium
  labels:
    project: mesh-arena
    app: stadium
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: stadium
