services/stadium/route-all-bigger.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stadium-vs
spec:
  hosts:
  - stadium
  http:
  - route:
    - destination:
        host: stadium
        subset: big
