services/stadium/stadium-routes.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: stadium-routes
spec:
  host: stadium
  subsets:
  - name: small
    labels:
      version: small
  - name: big
    labels:
      version: big
